Fix internal linting setup and add missing headers (#1741)

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/codingzeal/create-react-app/issues"
   },
   "files": [
-    ".babelrc",
-    ".eslintrc",
+    "babelrc",
+    "eslintrc",
     "bin",
     "config",
     "scripts",
