--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -28,8 +28,7 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react-app": "^2.1.1",
     "babel-preset-stage-1": "^6.22.0",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
