--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
-    "babel-eslint": "7.1.1",
+    "babel-eslint": "7.2.3",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
     "babel-preset-react-app": "^2.1.1",
@@ -38,13 +38,13 @@
     "css-loader": "0.26.1",
     "detect-port": "1.1.0",
     "dotenv": "2.0.0",
-    "eslint": "3.16.1",
-    "eslint-config-react-app": "^0.6.1",
+    "eslint": "3.19.0",
+    "eslint-config-zeal": "0.20.1",
+    "eslint-import-resolver-webpack": "0.8.1",
     "eslint-loader": "1.6.0",
-    "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jest": "19.0.1",
+    "eslint-plugin-react": "6.10.3",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.10.0",
     "fs-extra": "0.30.0",
