--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -29,7 +29,7 @@
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
     "babel-preset-react-app": "^2.1.1",
-    "babel-preset-stage-1": "^6.22.0",
+    "babel-preset-stage-1": "6.22.0",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
@@ -39,26 +39,26 @@
     "detect-port": "1.1.0",
     "dotenv": "2.0.0",
     "eslint": "3.19.0",
-    "eslint-config-zeal": "0.20.1",
+    "eslint-config-zeal": "0.20.2",
     "eslint-import-resolver-webpack": "0.8.1",
     "eslint-loader": "1.6.0",
     "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jest": "19.0.1",
+    "eslint-plugin-jest": "20.0.0",
     "eslint-plugin-react": "6.10.3",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.10.0",
     "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.3",
-    "identity-obj-proxy": "^3.0.0",
+    "identity-obj-proxy": "3.0.0",
     "jest": "18.1.0",
     "json-loader": "0.5.4",
-    "node-sass": "^3.13.1",
+    "node-sass": "3.13.1",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "4.1.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
