Update to latest eslint-config-zeal and peers

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -39,12 +39,12 @@
     "detect-port": "1.1.0",
     "dotenv": "2.0.0",
     "eslint": "3.19.0",
-    "eslint-config-zeal": "0.20.2",
+    "eslint-config-zeal": "^0.21.0",
     "eslint-import-resolver-webpack": "0.8.1",
     "eslint-loader": "1.6.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jest": "20.0.0",
-    "eslint-plugin-react": "6.10.3",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.10.0",
     "fs-extra": "0.30.0",
