--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -43,6 +43,7 @@
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "fs-extra": "3.0.1",
+    "graphql-tag": "^2.4.2",
     "html-webpack-plugin": "2.28.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "20.0.3",
