➕ Add graphql-tag and jest-transform-graphql deps
-  🐛  use resolveApp for paths in config

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -55,11 +55,13 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "6.1.0",
     "fs-extra": "^9.0.0",
+    "graphql-tag": "^2.11.0",
     "html-webpack-plugin": "4.4.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.4.2",
     "jest-circus": "26.4.2",
     "jest-resolve": "26.4.0",
+    "jest-transform-graphql": "^2.1.0",
     "jest-watch-typeahead": "0.6.1",
     "mini-css-extract-plugin": "0.11.2",
     "optimize-css-assets-webpack-plugin": "5.0.4",
